fix title font on mobile

--- a/src/prompts/layouts/paging-window/header/Styles.css
+++ b/src/prompts/layouts/paging-window/header/Styles.css
@@ -137,5 +137,9 @@
 			width: 25px;
 			height: 25px;
 		}
+
+		& .title {
+			font-size: 0.875rem;
+		}
 	}
 }
